added server config and gulp task to start server

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 
   "devDependencies": {
     "express": "~3.4.7",
-    "gulp":    "~3.2.2"
+    "gulp":    "~3.2.2",
+    "nodemon": "~1.0.7",
+    "reload":  "~0.1.0"
   }
 }
