--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
   "homepage": "https://github.com/david-casagrande/gulp-ember",
 
   "devDependencies": {
-    "bower":       "~1.2.8",
-    "express":     "~3.4.7",
-    "gulp":        "~3.2.2",
-    "gulp-concat": "~2.1.6",
-    "gulp-jshint": "git://github.com/wearefractal/gulp-jshint.git",
-    "nodemon":     "~1.0.7",
-    "reload":      "~0.1.0"
+    "bower":           "~1.2.8",
+    "express":         "~3.4.7",
+    "gulp":            "~3.2.2",
+    "gulp-concat":     "~2.1.6",
+    "gulp-jshint":     "git://github.com/wearefractal/gulp-jshint.git",
+    "gulp-handlebars": "~0.2.3",
+    "nodemon":         "~1.0.7",
+    "reload":          "~0.1.0"
   }
 }
