--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "devDependencies": {
     "bower":           "~1.2.8",
     "express":         "~3.4.7",
+    "grunt": "~0.4.2",
+    "grunt-ember-handlebars": "~0.7.0",
     "gulp":            "~3.2.2",
     "gulp-concat":     "~2.1.6",
     "gulp-jshint":     "git://github.com/wearefractal/gulp-jshint.git",
+    "gulp-grunt":      "~0.4.1",
     "gulp-handlebars": "~0.2.3",
     "nodemon":         "~1.0.7",
     "reload":          "~0.1.0"
