--- a/package.json
+++ b/package.json
@@ -27,16 +27,20 @@
   "homepage": "https://github.com/david-casagrande/gulp-ember",
 
   "devDependencies": {
-    "bower":           "~1.2.8",
-    "express":         "~3.4.7",
-    "grunt": "~0.4.2",
+    "bower":                  "~1.2.8",
+    "chai":                   "~1.8.1",
+    "express":                "~3.4.7",
+    "grunt":                  "~0.4.2",
     "grunt-ember-handlebars": "~0.7.0",
-    "gulp":            "~3.2.2",
-    "gulp-concat":     "~2.1.6",
-    "gulp-jshint":     "git://github.com/wearefractal/gulp-jshint.git",
-    "gulp-grunt":      "~0.4.1",
-    "gulp-handlebars": "~0.2.3",
-    "nodemon":         "~1.0.7",
-    "reload":          "~0.1.0"
+    "gulp":                   "~3.2.2",
+    "gulp-concat":            "~2.1.6",
+    "gulp-grunt":             "~0.4.1",
+    "gulp-jshint":            "git://github.com/wearefractal/gulp-jshint.git",
+    "gulp-karma":             "~0.0.1",
+    "gulp-rename":            "~0.2.1",
+    "karma-chai":             "~0.0.2",
+    "karma-mocha":            "~0.1.1",
+    "nodemon":                "~1.0.7",
+    "reload":                 "~0.1.0"
   }
 }
