--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "vendor"
   ],
   "dependencies": {
+    "amd-loadr" : "~0.0.2",
     "ember":      "~1.3.0-beta.4",
-    "ember-data": "~1.0.0-beta.4"
+    "ember-data": "~1.0.0-beta.4",
+    "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master"
   }
 }
