added gulp ember handlebars to dependencies to remove Gruntfile

--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "grunt-concat-sourcemap":     "~0.4.0",
     "gulp":                       "~3.2.2",
     "gulp-concat":                "~2.1.6",
+    "gulp-ember-handlebars":      "~0.3.1",
     "gulp-es6-module-transpiler": "~0.1.0",
     "gulp-grunt":                 "~0.4.1",
     "gulp-jade":                  "~0.3.0",
     "gulp-jshint":                "git://github.com/wearefractal/gulp-jshint.git",
     "gulp-karma":                 "~0.0.1",
     "gulp-nodemon":               "~0.1.1",
+    "gulp-processhtml":           "~0.0.1",
     "gulp-uglify":                "~0.1.0",
     "karma-chai":                 "~0.0.2",
     "karma-mocha":                "~0.1.1",
