--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "amd-loadr" : "~0.0.2",
     "ember":      "~1.3.0-beta.4",
     "ember-data": "~1.0.0-beta.4",
-    "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master"
+    "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master",
+    "foundation":     "~5.0.3"
   }
 }
