--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "grunt-concat-sourcemap":     "~0.4.0",
     "gulp":                       "~3.2.2",
     "gulp-concat":                "~2.1.6",
-    "gulp-ember-handlebars":      "~0.3.1",
+    "gulp-ember-handlebars":      "git://github.com/david-casagrande/gulp-ember-handlebars.git",
     "gulp-es6-module-transpiler": "~0.1.0",
     "gulp-grunt":                 "~0.4.1",
     "gulp-jade":                  "~0.3.0",
