--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,8 @@
     "ember-data": "~1.0.0-beta.4",
     "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master",
     "foundation":     "~5.0.3"
+  },
+  "devDependencies": {
+    "faker": "~0.0.2"
   }
 }
