--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,11 @@
 {
   "name": "gulp-ember",
-  "version": "0.0.0",
-  "authors": [
-    "David Casagrande <dncasagrande@gmail.com>"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "vendor"
-  ],
   "dependencies": {
     "amd-loadr" : "~0.0.2",
-    "ember":      "~1.3.0-beta.4",
-    "ember-data": "~1.0.0-beta.4",
+    "handlebars": "~1.3.0",
+    "jquery": "~2.1.0",
+    "ember":      "~1.4.0",
+    "ember-data": "~1.0.0-beta.6",
     "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master",
     "foundation":     "~5.0.3"
   },
