--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/david-casagrande/gulp-ember",
 
   "devDependencies": {
-    "bower":                      "~1.2.8",
+    "bower":                      "~1.3.1",
     "chai":                       "~1.8.1",
     "ejs":                        "~0.8.5",
     "express":                    "~3.4.7",
@@ -37,18 +37,18 @@
     "grunt-concat-sourcemap":     "~0.4.0",
     "gulp":                       "~3.2.2",
     "gulp-concat":                "~2.1.6",
-    "gulp-ember-handlebars":      "git://github.com/david-casagrande/gulp-ember-handlebars.git",
+    "gulp-ember-handlebars":      "git://github.com/david-casagrande/gulp-ember-handlebars.git#amd_for_eak_resolver",
     "gulp-es6-module-transpiler": "~0.1.0",
     "gulp-grunt":                 "~0.4.1",
     "gulp-jshint":                "git://github.com/wearefractal/gulp-jshint.git",
     "gulp-karma":                 "~0.0.1",
+    "gulp-plumber":               "~0.5.6",
     "gulp-processhtml":           "~0.0.1",
-    "gulp-sass":                  "~0.6.0",
+    "gulp-sass":                  "~0.7.1",
     "gulp-uglify":                "~0.1.0",
     "karma-chai":                 "~0.0.2",
     "karma-mocha":                "~0.1.1",
     "nodemon":                    "~1.0.14",
-    "path":                       "~0.4.9",
     "reload":                     "~0.1.0",
     "request":                    "~2.33.0"
   }
