--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "gulp-ember",
   "version": "0.0.0",
   "description": "A Gulp Ember Builder",
@@ -7,49 +6,41 @@
   "scripts": {
     "test": "gulp test"
   },
-  
   "repository": {
     "type": "git",
     "url": "git://github.com/david-casagrande/gulp-ember.git"
   },
-  
   "keywords": [
     "gulp",
     "ember"
   ],
-  
   "author": "David Casagrande",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/david-casagrande/gulp-ember/issues"
   },
-  
   "homepage": "https://github.com/david-casagrande/gulp-ember",
-
   "devDependencies": {
-    "bower":                      "~1.3.1",
-    "chai":                       "~1.8.1",
-    "ejs":                        "~0.8.5",
-    "express":                    "~3.4.7",
-    "fabrication":                "~0.1.0",
-    "fileset":                    "~0.1.5",
-    "grunt":                      "~0.4.2",
-    "grunt-concat-sourcemap":     "~0.4.0",
-    "gulp":                       "~3.2.2",
-    "gulp-concat":                "~2.1.6",
-    "gulp-ember-handlebars":      "git://github.com/david-casagrande/gulp-ember-handlebars.git#amd_for_eak_resolver",
+    "bower": "~1.3.1",
+    "express": "~3.4.7",
+    "gulp": "~3.2.2",
+    "gulp-concat-sourcemap": "0.0.2",
+    "gulp-ember-handlebars": "git://github.com/david-casagrande/gulp-ember-handlebars.git#amd_for_eak_resolver",
     "gulp-es6-module-transpiler": "~0.1.0",
-    "gulp-grunt":                 "~0.4.1",
-    "gulp-jshint":                "git://github.com/wearefractal/gulp-jshint.git",
-    "gulp-karma":                 "~0.0.1",
-    "gulp-plumber":               "~0.5.6",
-    "gulp-processhtml":           "~0.0.1",
-    "gulp-sass":                  "~0.7.1",
-    "gulp-uglify":                "~0.1.0",
-    "karma-chai":                 "~0.0.2",
-    "karma-mocha":                "~0.1.1",
-    "nodemon":                    "~1.0.14",
-    "reload":                     "~0.1.0",
-    "request":                    "~2.33.0"
+    "gulp-jshint": "git://github.com/wearefractal/gulp-jshint.git",
+    "gulp-karma": "~0.0.1",
+    "gulp-plumber": "~0.5.6",
+    "gulp-processhtml": "~0.0.1",
+    "gulp-sass": "~0.7.1",
+    "gulp-uglify": "~0.1.0",
+    "karma": "~0.12.0",
+    "karma-chai": "~0.0.2",
+    "karma-mocha": "~0.1.1",
+    "karma-requirejs": "~0.2.1",
+    "karma-phantomjs-launcher": "~0.1.2",
+    "nodemon": "~1.0.14",
+    "reload": "~0.1.0",
+    "request": "~2.33.0",
+    "requirejs": "~2.1.11"
   }
 }
